# nbdialog

./: README.md  core.html  core.html.md  index.html  index.html.md  providers.openai.html  providers.openai.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml  small_demo.html  small_demo.html.md  tools.browse.html  tools.browse.html.md  tools.search.html  tools.search.html.md
nbdialog/: __init__.py  _modidx.py  core.py
nbdialog/providers/: azure.py  openai.py
nbdialog/tools/: browse.py  search.py
nbs/: 00_core.ipynb  01_providers.azure.ipynb  01_providers.openai.ipynb  02_tools.search.ipynb  03_tools.browse.ipynb  99_small_demo.ipynb  index.ipynb  nbdev.yml  sidebar.yml  small_demo.ipynb
